add inspirations, change styling, add basic form styles

--- a/index.styl
+++ b/index.styl
@@ -1,6 +1,6 @@
 /* Variables */
 /* Typography */
-$fontText = -apple-system, sans-serif;
+$fontText = monospace;
 $fontHeading = -apple-system, sans-serif;
 $baseFontSize = 14px;
 /* Colors */
@@ -165,4 +165,18 @@ thead {
 
 tbody {
     color: $gray300;
+}
+
+input {
+    width: 100%;
+    padding: 0.25rem;
+    font-size: 1rem;
+}
+
+input[type='checkbox'] {
+    width: auto;
+}
+
+label input {
+    margin-top: 8px;
 }
